2009-10-02  Diego Novillo  <dnovillo@google.com>

* sourcebuild.texi: Document lto-plugin.
	* invoke.texi: Add documentation for -use-linker-plugin
	and complete documentation for -flto.
	* install.texi: Document --enable-gold.

2009-10-02  Richard Guenther  <rguenther@suse.de>

	PR lto/41547
	PR lto/41548
	* tree.h (is_lang_specific): Include LANG_TYPE.
	* tree.c (find_decls_types_r): Manually add interesting parts
	of TYPE_FIELDS.  Walk BINFO_VIRTUALS.  Do not walk TYPE_METHODS.

testsuite/ChangeLog.lto

	* g++.dg/lto/20091002-1_0.C: New testcase.
	* g++.dg/lto/20091002-2_0.C: Likewise..
	* g++.dg/lto/20091002-3_0.C: Likewise..

2009-10-02  Diego Novillo  <dnovillo@google.com>

	* gcc.c-torture/execute/builtins/builtins.exp: Re-enable
	LTO testing.

2009-10-02  Diego Novillo  <dnovillo@google.com>

	* lto-symtab.h: Update copyright boilerplate.
	* plugin-api.h: Likewise.

2009-10-02  Diego Novillo  <dnovillo@google.com>

	* Makefile.am (AM_CPPFLAGS): Remove -D_LARGEFILE_SOURCE
	and -D_FILE_OFFSET_BITS=64.
	* configure.ac: Add AC_SYS_LARGEFILE.
	* configure: Regenerate.
	* Makefile.in: Regenerate.
	* lto-plugin.c: Fix copyright boilerplate.

2009-10-02  Diego Novillo  <dnovillo@google.com>

	* Makefile.am (ACLOCAL_AMFLAGS): Define.
	* aclocal.m4: Regenerate with aclocal-2.64
	* acinclude.m4: Remove.
	* Makefile.in: Regenerate with automake-1.11
	* configure.ac (AC_PREREQ): Update to 2.64.
	* configure: Regenerate.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/lto@152422 138bc75d-0d04-0410-961f-82ee72b054a4